# jester

./: Cargo.toml  Dockerfile  Jenkinsfile  build.rs  kaniko-builder-slim.yaml  task.md
src/: autorenew.rs  certificate.rs  config.rs  http.rs  main.rs  prerenewal.rs  validate.rs
