[package]
name = "jester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
rsa = "0.9.2"
x509-parser = "0.15.0"
pem = "2.0.1"
pkcs8 = "0.10.2"
rcgen = "0.11.1"
rustls = "0.21.5"
rand = "0.8.5"
chrono = "0.4.26"
time = "0.3.23"

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "git", "gitcl", "cargo", "rustc"]}
