[package]
name = "jester"
version = "0.1.0"
edition = "2021"

# uncomment to reduce time to generate rsa private key
#[profile.dev]
#opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.9.2"
ecdsa = "0.16.7"
p256 = { version = "0.13.2", features = ["pem"] }
p384 = { version = "0.13.0", features = ["pem"] }
x509-parser = "0.15.0"
pem = "2.0.1"
pkcs8 = "0.10.2"
rcgen = { version = "0.11.1", features = ["x509-parser"]}
rand = "0.8.5"
time = "0.3.23"
reqwest = { version = "0.11.18", features = ["rustls-tls", "blocking"] }
rustls = "0.21.5"
rustls-pemfile = "1.0.3"
webpki = "0.22.0"
picky = { version = "7.0.0-rc.7", features = ["pkcs7"] }
base64_light = "0.1.5"

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "git", "gitcl", "cargo", "rustc"]}


